--- a/samtools/1.2/Dockerfile
+++ b/samtools/1.2/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="2"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="3"
 LABEL software="Samtools"
 LABEL software.version="1.2"
 LABEL about.summary="Tools for manipulating next-generation sequencing data"
