--- a/pia/1.1.0-SNAPSHOT/Dockerfile
+++ b/pia/1.1.0-SNAPSHOT/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="PIA - Protein Inference Algorithms"
 LABEL software.version="1.1.0-SNAPSHOT"
 LABEL about.summary="Compile PIA XML files and run pipelines with this image"
