SPECTRA-CLUSTER_1_1_2: Updated Dockerfile to use specific version of base image

--- a/spectra-cluster-cli/v1.1.2/Dockerfile
+++ b/spectra-cluster-cli/v1.1.2/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="spectra-cluster-cli"
 LABEL software.version="v1.1.2"
 LABEL about.summary="PRIDE Cluster algorithm to cluster heterogeneous mass spectra"
