--- a/openms/1.11.1-3/Dockerfile
+++ b/openms/1.11.1-3/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="OpenMS"
 LABEL software.version="1.11.1-3"
 LABEL about.summary="C++ libraries ans tools for MS/MS data analysis"
