--- a/toppas/1.11.1-3/Dockerfile
+++ b/toppas/1.11.1-3/Dockerfile
@@ -1,8 +1,8 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:v1.0.0_cv4
+FROM ubuntu:trusty
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL base_image="ubuntu:trusty"
 LABEL version="3"
 LABEL software="TOPPAS"
 LABEL software.version="1.11.1-3"
@@ -26,8 +26,6 @@ RUN apt-get update && \
   apt-get clean && \
   apt-get purge && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-USER biodocker
 
 # some QT-Apps/Gazebo don't not show controls without this
 ENV QT_X11_NO_MITSHM 1
