DISCOVARDENOVO: Updated Dockerfile to use specific version of base image

--- a/discovardenovo/52488/Dockerfile
+++ b/discovardenovo/52488/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="discovardenovo"
 LABEL software.version="52488"
 LABEL about.summary="Genome variant discovery through assembly"
