--- a/bwa/0.7.15/Dockerfile
+++ b/bwa/0.7.15/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="2"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="3"
 LABEL software="bwa"
 LABEL software.version="0.7.15"
 LABEL about.summary="Burrow-Wheeler Aligner for pairwise alignment between DNA sequences"
