SEQ_CRUMBS: Updated Dockerfile to use specific version of base image

--- a/seq_crumbs/0.1.9/Dockerfile
+++ b/seq_crumbs/0.1.9/Dockerfile
@@ -1,7 +1,7 @@
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="seq_crumbs"
 LABEL software.version="0.1.9"
 LABEL about.summary="A selection of tools used to process 'small sequences'" 
