--- a/clustal-omega/1.2.1-1/Dockerfile
+++ b/clustal-omega/1.2.1-1/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="3"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="4"
 LABEL software="clustal-omega"
 LABEL software.version="1.2.1-1"
 LABEL about.summary="general purpose multiple sequence alignment program for proteins"
