--- a/abyss/1.9.0/Dockerfile
+++ b/abyss/1.9.0/Dockerfile
@@ -1,10 +1,10 @@
 ################## BASE IMAGE ######################
 
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="3"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="4"
 LABEL software="abyss"
 LABEL software.version="1.9.0"
 LABEL about.summary="ABySS is a *de novo* sequence assembler"
