--- a/longranger/2.2.2/Dockerfile
+++ b/longranger/2.2.2/Dockerfile
@@ -1,12 +1,12 @@
 ################## BASE IMAGE ######################
 
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ENV VERSION "2.2.2"
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="longranger"
 LABEL software.version="$VERSION"
 LABEL about.summary="10X genomics aligner"
