JELLYFISH_2_2_3: Updated Dockerfile to use specific version of base image

--- a/jellyfish/2.2.3/Dockerfile
+++ b/jellyfish/2.2.3/Dockerfile
@@ -1,11 +1,11 @@
 ############################# Dockerfile ####################################
 
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ############################# METADATA ######################################
 
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="jellyfish"
 LABEL software.version="2.2.3"
 LABEL about.summary="A fast multi-threaded k-mer counter"
