--- a/clustal-omega/1.2.1/Dockerfile
+++ b/clustal-omega/1.2.1/Dockerfile
@@ -3,9 +3,9 @@ FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
 LABEL base_image="biocontainers:v1.0.0_cv4"
-LABEL version="4"
+LABEL version="5"
 LABEL software="clustal-omega"
-LABEL software.version="1.2.1-1"
+LABEL software.version="1.2.1"
 LABEL about.summary="general purpose multiple sequence alignment program for proteins"
 LABEL about.home="http://www.clustal.org/omega/"
 LABEL about.documentation="http://www.clustal.org/omega/#about.documentation"
