--- a/searchgui/2.8.6/Dockerfile
+++ b/searchgui/2.8.6/Dockerfile
@@ -23,8 +23,9 @@ MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
 RUN ZIP=SearchGUI-2.8.6.zip && \
     wget https://github.com/BioDocker/software-archive/releases/download/SearchGUI/$ZIP -O /tmp/$ZIP && \
     unzip /tmp/$ZIP -d /home/biodocker/bin/ && \
-    rm /tmp/$ZIP && \
-    bash -c 'echo -e "#!/bin/bash\njava -jar /home/biodocker/bin/SearchGUI-2.8.6/SearchGUI-2.8.6.jar $@"' > /home/biodocker/bin/SearchGUI && \
+    rm /tmp/$ZIP
+
+RUN bash -c 'echo -e "#!/bin/bash\njava -jar /home/biodocker/bin/SearchGUI-2.8.6/SearchGUI-2.8.6.jar \$@"' > /home/biodocker/bin/SearchGUI && \
     chmod +x /home/biodocker/bin/SearchGUI
 
 ENV PATH /home/biodocker/bin/SearchGUI:$PATH
