TANDEM:10-12-01: Fixed cmd line missing arg

--- a/tandem/10-12-01-1/Dockerfile
+++ b/tandem/10-12-01-1/Dockerfile
@@ -20,8 +20,9 @@ MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
 RUN ZIP=tandem-linux-10-12-01-1.zip && \
   wget https://github.com/BioDocker/software-archive/releases/download/X!Tandem/$ZIP -O /tmp/$ZIP && \
   unzip /tmp/$ZIP -d /home/biodocker/bin/ && \
-  rm /tmp/$ZIP && \
-  bash -c 'echo -e "#!/bin/bash\n/home/biodocker/bin/tandem-linux-10-12-01-1/bin/tandem.exe $@"' > /home/biodocker/bin/tandem && \
+  rm /tmp/$ZIP
+
+RUN bash -c 'echo -e "#!/bin/bash\n/home/biodocker/bin/tandem-linux-10-12-01-1/bin/tandem.exe \$@"' > /home/biodocker/bin/tandem && \
   chmod 755 /home/biodocker/bin/tandem
 
 ENV PATH /home/biodocker/bin:$PATH
