--- a/denovogui/1.10.4/Dockerfile
+++ b/denovogui/1.10.4/Dockerfile
@@ -3,7 +3,7 @@ FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
 LABEL base_image="biocontainers:v1.0.0_cv4"
-LABEL version="3"
+LABEL version="4"
 LABEL software="denovogui"
 LABEL software.version="1.10.4"
 LABEL about.summary="graphical user interface for de novo sequencing of tandem mass spectra"
@@ -27,7 +27,7 @@ RUN ZIP=DeNovoGUI-1.10.4.zip && \
     wget https://github.com/BioDocker/software-archive/releases/download/deNovoGUI/$ZIP -O /tmp/$ZIP && \
     unzip /tmp/$ZIP -d /home/biodocker/bin/ && \
     rm /tmp/$ZIP && \
-    bash -c 'echo -e "#!/bin/bash\njava -jar /home/biodocker/bin/DeNovoGUI-1.10.4/DeNovoGUI-1.10.4.jar $@" > /home/biodocker/bin/denovogui' && \
+    bash -c 'echo -e "#!/bin/bash\njava -jar /home/biodocker/bin/DeNovoGUI-1.10.4/DeNovoGUI-1.10.4.jar \$@" > /home/biodocker/bin/denovogui' && \
     chmod +x /home/biodocker/bin/denovogui
 
 ENV PATH /home/biodocker/bin/denovogui:$PATH
