update making runpia.sh runnable

--- a/pia/1.3.8/Dockerfile
+++ b/pia/1.3.8/Dockerfile
@@ -33,6 +33,8 @@ RUN set -x \
 
 COPY ./runpia.sh $USER_HOME/bin/
 
+RUN chmod +x $USER_HOME/bin/runpia.sh
+
 WORKDIR /data/
 
 ENTRYPOINT ["runpia.sh"]
