--- a/.gitmodules
+++ b/.gitmodules
@@ -1,1 +1,12 @@
-
+[submodule "metfrag-cli-batch/2.4.3"]
+	path = metfrag-cli-batch/2.4.3
+	url = https://github.com/phnmnl/container-metfrag-cli-batch/
+[submodule "ipo/1.7.5"]
+	path = ipo/1.7.5
+	url = https://github.com/phnmnl/container-ipo
+[submodule "isatab-create/0.9.5"]
+	path = isatab-create/0.9.5
+	url = https://github.com/phnmnl/container-isatab-create/
+[submodule "simid/1.0.0"]
+	path = simid/1.0.0
+	url = https://github.com/phnmnl/container-simid/
