fix debian dockerfile

--- a/spoa/1.1.3-2bpo91-deb/Dockerfile
+++ b/spoa/1.1.3-2bpo91-deb/Dockerfile
@@ -13,6 +13,7 @@ LABEL    software="spoa" \
     extra.binaries="/usr/bin/spoa" \ 
     about.tags=""
 
+USER root
 ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update && apt-get install -y spoa && apt-get clean && apt-get purge && rm -rf /var/lib/apt/lists/* /tmp/*
 USER biodocker
