--- a/integron-finder/1.5.1/Dockerfile
+++ b/integron-finder/1.5.1/Dockerfile
@@ -3,13 +3,14 @@ FROM ubuntu:16.04
 #####EXTRA LABELS#####
 LABEL autogen="no" \ 
     software="Integron Finder" \ 
-    version="1" \
+    version="2" \
     software.version="1.5.1" \ 
     about.summary="Integron Finder aims at detecting integrons in DNA sequences." \ 
     base_image="ubuntu:16.04" \
     about.home="https://github.com/gem-pasteur/Integron_Finder" \
     about.license="SPDX:GPL-3.0-only" \
     extra.identifier.biotools="integron_finder" \ 
+    extra.binaries="integron_finder" \
     ANNOT.Vendor="Institut Pasteur" \
     ANNOT.EDAM_Operation="['operation_0361', 'operation_0362', 'operation_0239', 'operation_2423', 'operation_0253', 'operation_3087', 'operation_0415']" \
     ANNOT.EDAM_Topic="['topic_0160', 'topic_0160', 'topic_0080', 'topic_3073', 'topic_3053', 'topic_3053', 'topic_0114', 'topic_0798']" \
@@ -33,7 +34,7 @@ USER if
 
 WORKDIR /home/if
 
-ENTRYPOINT ["integron_finder"]
+# ENTRYPOINT ["integron_finder"]
 
-CMD ["-h"]
+# CMD ["-h"]
 
