--- a/gatk/3.4/Dockerfile
+++ b/gatk/3.4/Dockerfile
@@ -5,7 +5,7 @@ FROM biocontainers/biocontainers:latest
 ###################################### METADATA ##############################
 
 LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL version="2"
 LABEL software="gatk"
 LABEL software.version="3.4"
 LABEL about.summary="The Genome Analysis Toolkit or GATK is a software package developed at the Broad Institute to analyze high-throughput sequencing data."
@@ -13,7 +13,9 @@ LABEL about.home="https://www.broadinstitute.org/gatk/|https://github.com/broadg
 LABEL about.license_file="https://github.com/broadgsa/gatk-protected/blob/master/licensing/protected_license.txt"
 LABEL about.license="SPDX:BSD-3-Clause"
 LABEL about.tags="Genomics"
-LABEL extra.identifiers.biotools="gatk"
+LABEL extra.identifiers.biotools="gatk" \
+      extra.binaries="GenomeAnalysisTK"
+
 
 LABEL about.provides="gatk 3.4|samtools 1.2|bwakit 0.7.12|picard tools 1.139"
 
@@ -158,7 +160,7 @@ VOLUME ["/data", "/config"]
 
 
 
-CMD ["GenomeAnalysisTK"]
+# CMD ["GenomeAnalysisTK"]
 
 ##################### INSTALLATION END #####################
 
