--- a/bedtools/2.28.0/Dockerfile
+++ b/bedtools/2.28.0/Dockerfile
@@ -5,7 +5,7 @@ FROM biocontainers/biocontainers:v1.0.0_cv4
 ################## METADATA ######################
 
 LABEL base_image="biocontainers:v1.0.0_cv4"
-LABEL version="1"
+LABEL version="2"
 LABEL software="bedtools"
 LABEL software.version="2.28.0"
 LABEL about.summary="a powerful toolset for genome arithmetic"
@@ -14,6 +14,7 @@ LABEL about.documentation="http://quinlanlab.org/tutorials/bedtools/bedtools.htm
 LABEL about.license_file="https://github.com/arq5x/bedtools2/blob/master/LICENSE"
 LABEL about.license="SPDX:LGPL-2.0-only"
 LABEL extra.identifiers.biotools="bedtools"
+LABEL extra.binaries="bedtools"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
@@ -23,4 +24,4 @@ RUN conda install bedtools=2.28.0
 
 WORKDIR /data/
 
-ENTRYPOINT ["bedtools"]
+# ENTRYPOINT ["bedtools"]
