fix syntax error

--- a/coregenebuilder/1.0/Dockerfile
+++ b/coregenebuilder/1.0/Dockerfile
@@ -14,7 +14,7 @@ LABEL version="2" \
     ANNOT.EDAM_Operation="['operation_2995', 'operation_0289', 'operation_0362', 'operation_0291']" \
     ANNOT.EDAM_Topic="['topic_0623']" \
     ANNOT.Requires="[blast+, muscle, biopython , R, prodigal, andi, ecamber, opscan, fasta2agp]" \
-    ANNOT.Provides="['coregenebuilder']"
+    ANNOT.Provides="['coregenebuilder']" \
     extra.binaries="coregenebuilder"
       
 RUN apt-get -y update && \
