--- a/samtools/1.3.1/Dockerfile
+++ b/samtools/1.3.1/Dockerfile
@@ -4,7 +4,7 @@ FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
 LABEL base_image="biocontainers:v1.0.0_cv4"
-LABEL version="3"
+LABEL version="4"
 LABEL software="Samtools"
 LABEL software.version="1.3.1"
 LABEL about.summary="Tools for manipulating next-generation sequencing data"
@@ -15,6 +15,7 @@ LABEL about.license_file="https://github.com/samtools/samtools/blob/develop/LICE
 LABEL about.license="SPDX:MIT"
 LABEL about.tags="Genomics"
 LABEL extra.identifiers.biotools="SAM"
+LABEL extra.binaries="samtools"
 
 ################## MAINTAINER ######################
 MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
@@ -23,4 +24,4 @@ RUN conda install samtools=1.3.1
 
 WORKDIR /data/
 
-CMD ["samtools"]
+# CMD ["samtools"]
