--- a/discovar/52488/Dockerfile
+++ b/discovar/52488/Dockerfile
@@ -3,7 +3,7 @@ FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
 LABEL base_image="biocontainers:v1.0.0_cv4"
-LABEL version="2"
+LABEL version="3"
 LABEL software="discovar"
 LABEL software.version="52488"
 LABEL about.summary="DISCOVAR is a new variant caller"
@@ -12,6 +12,7 @@ LABEL about.documentation="http://www.broadinstitute.org/software/discovar/blog/
 LABEL about.license_file="ftp://ftp.broadinstitute.org/pub/crd/Discovar/LICENSE"
 LABEL extra.identifiers.biotools="discovar"
 LABEL about.tags="Genomics"
+LABEL extra.binaries="Discovar"
 
 
 ################## INSTALLATION ######################
@@ -43,7 +44,7 @@ USER biodocker
 WORKDIR /data
 
 # DEFINE DEFAULT COMMAND
-CMD ["Discovar"]
+#CMD ["Discovar"]
 
 ##################### INSTALLATION END #####################
 
