--- a/jellyfish/2.2.3/Dockerfile
+++ b/jellyfish/2.2.3/Dockerfile
@@ -5,7 +5,7 @@ FROM biocontainers/biocontainers:v1.0.0_cv4
 ############################# METADATA ######################################
 
 LABEL base_image="biocontainers:v1.0.0_cv4"
-LABEL version="2"
+LABEL version="3"
 LABEL software="jellyfish"
 LABEL software.version="2.2.3"
 LABEL about.summary="A fast multi-threaded k-mer counter"
@@ -44,7 +44,7 @@ USER biodocker
 WORKDIR /data
 
 # DEFINE DEFAULT COMMAND
-CMD ["jellyfish"]
+# CMD ["jellyfish"]
 
 ##################### INSTALLATION END #####################
 
