--- a/gapcloser/1.12-r6/Dockerfile
+++ b/gapcloser/1.12-r6/Dockerfile
@@ -4,7 +4,7 @@ FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
 LABEL base_image="biocontainers:v1.0.0_cv4"
-LABEL version="2"
+LABEL version="3"
 LABEL software="gapcloser"
 LABEL software.version="1.12-r6"
 LABEL about.summary="A novel short-read assembly method that can build a de novo draft assembly for the human-sized genomes"
@@ -13,6 +13,7 @@ LABEL about.documentation="http://soap.genomics.org.cn/gapcloser.html"
 LABEL about.license_file="http://soap.genomics.org.cn/gapcloser.html"
 LABEL about.license="SPDX:GPL-3.0-only"
 LABEL about.tags="Genomics"
+LABEL extra.binaries="GapCloser"
 
 ################## INSTALLATION ######################
 ################## BEGIN INSTALLATION ######################
@@ -29,7 +30,7 @@ RUN wget $URL/$ZIP -O $DST/$ZIP && \
 WORKDIR /data
 
 # DEFINE DEFAULT COMMAND
-CMD ["GapCloser"]
+# CMD ["GapCloser"]
 
 ##################### INSTALLATION END #####################
 
