--- a/magicblast/1.3.0/Dockerfile
+++ b/magicblast/1.3.0/Dockerfile
@@ -4,7 +4,7 @@ FROM biocontainers/biocontainers:v1.0.0_cv4
 ################## METADATA ######################
 
 LABEL base_image="biocontainers:v1.0.0_cv4"
-LABEL version="4"
+LABEL version="5"
 LABEL software="magicblast"
 LABEL software.version="1.3.0"
 LABEL about.summary="Magic-BLAST is a new tool for mapping large sets of next-generation RNA or DNA sequencing runs against a whole genome or transcriptome"
@@ -13,6 +13,7 @@ LABEL about.documentation="https://ncbi.github.io/magicblast/"
 LABEL about.license_file="https://ncbi.github.io/magicblast/dev/copyright.html"
 LABEL about.license="SPDX:MIT"
 LABEL about.tags="BLAST"
+LABEL extra.binaries="magicblast"
 
 
 ################## MAINTAINER ######################
@@ -35,4 +36,4 @@ RUN cd $DST && \
 
 WORKDIR /data/
 
-CMD ["magicblast"]
+# CMD ["magicblast"]
