--- a/aliscore/2.0/Dockerfile
+++ b/aliscore/2.0/Dockerfile
@@ -5,7 +5,7 @@ FROM biocontainers/biocontainers:v1.0.0_cv4
 ################## METADATA ######################
 
 LABEL base_image="biocontainers:v1.0.0_cv4"
-LABEL version="3"
+LABEL version="4"
 LABEL software="Aliscore"
 LABEL software.version="2.0"
 LABEL about.summary="Aliscore is designed to filter alignment ambiguous or randomly similar sites in multiple sequence alignments (MSA)."
@@ -14,6 +14,7 @@ LABEL about.documentation="https://www.zfmk.de/dateien/atoms/files/aliscore_v.2.
 LABEL about.license_file="https://www.gnu.org/licenses/old-licenses/gpl-2.0.html"
 LABEL about.license="SPDX:GPL-2.0-only"
 LABEL about.tags="Genomics"
+LABEL extra.binaries="Aliscore.02.2.pl"
 
 ################## MAINTAINER ######################
 
@@ -33,4 +34,4 @@ RUN wget http://software.zfmk.de/ALISCORE_v2.0.zip && unzip /tmp/ALISCORE_v2.0.z
 ENV PATH /home/biodocker/bin/Aliscore/Aliscore_v.2.0:$PATH
 WORKDIR /data/
 
-CMD ["Aliscore.02.2.pl"]
+# CMD ["Aliscore.02.2.pl"]
