--- a/bwa/0.7.15/Dockerfile
+++ b/bwa/0.7.15/Dockerfile
@@ -3,7 +3,7 @@ FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
 LABEL base_image="biocontainers:v1.0.0_cv4"
-LABEL version="3"
+LABEL version="4"
 LABEL software="bwa"
 LABEL software.version="0.7.15"
 LABEL about.summary="Burrow-Wheeler Aligner for pairwise alignment between DNA sequences"
@@ -13,6 +13,7 @@ LABEL about.license_file="http://bio-bwa.sourceforge.net/"
 LABEL about.license="SPDX:GPL-3.0"
 LABEL extra.identifiers.biotools="bwa"
 LABEL about.tags="Genomics"
+LABEL extra.binaries="bwa"
 
 ################## MAINTAINER ######################
 MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
@@ -23,4 +24,4 @@ RUN conda install bwa=0.7.15
 
 WORKDIR /data/
 
-CMD ["bwa"]
+# CMD ["bwa"]
