--- a/shotmap/1.0.0/Dockerfile
+++ b/shotmap/1.0.0/Dockerfile
@@ -3,7 +3,7 @@ FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
 LABEL base_image="biocontainers:v1.0.0_cv4"
-LABEL version="2"
+LABEL version="3"
 LABEL software="shotmap"
 LABEL software.version="1.0.0"
 LABEL about.summary="A Shotgun Metagenome Annotation Pipeline"
@@ -12,6 +12,7 @@ LABEL about.documentation="https://github.com/sharpton/shotmap"
 LABEL about.license_file="https://github.com/sharpton/shotmap/blob/master/LICENSE"
 LABEL about.license="SPDX:GPL-2.0-only"
 LABEL about.tags="Metagenomics"
+LABEL extra.binaries="shotmap"
 
 ################## MAINTAINER ######################
 MAINTAINER Yasset Perez-Riverol <ypriverol@gmail.com>
@@ -33,4 +34,4 @@ ENV PATH /home/biodocker/bin/shotmap:$PATH
 
 WORKDIR /data/
 
-CMD ["shotmap"]
+# CMD ["shotmap"]
