--- a/raremetalworker/4.13.7/Dockerfile
+++ b/raremetalworker/4.13.7/Dockerfile
@@ -3,7 +3,7 @@ FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
 LABEL base_image="biocontainers:v1.0.0_cv4"
-LABEL version="2"
+LABEL version="3"
 LABEL software="raremetalworker"
 LABEL software.version="4.13.7"
 LABEL about.summary="single variant analysis, generating summary statistics for gene level meta analyses"
@@ -12,6 +12,7 @@ LABEL about.documentation="http://genome.sph.umich.edu/wiki/RAREMETALWORKER|http
 LABEL about.license_file="http://genome.sph.umich.edu/wiki/RAREMETALWORKER"
 LABEL about.tags="Genomics"
 LABEL extra.identifiers.biotools="RAREMETAL"
+LABEL extra.binaries="raremetal"
 
 
 ################## BEGIN INSTALLATION ######################
@@ -34,7 +35,7 @@ USER biodocker
 WORKDIR /data
 
 # DEFINE DEFAULT COMMAND
-CMD ["raremetal"]
+# CMD ["raremetal"]
 
 ################## MAINTAINER ######################
 
