--- a/seq_crumbs/0.1.9/Dockerfile
+++ b/seq_crumbs/0.1.9/Dockerfile
@@ -1,14 +1,14 @@
 FROM biocontainers/biocontainers:v1.0.0_cv4
 
 LABEL base_image="biocontainers:v1.0.0_cv4"
-LABEL version="2"
+LABEL version="3"
 LABEL software="seq_crumbs"
 LABEL software.version="0.1.9"
 LABEL about.summary="A selection of tools used to process 'small sequences'" 
 LABEL about.home="https://bioinf.comav.upv.es/seq_crumbs/"
 LABEL about.license="SPDX:GPL-3.0-only"
 LABEL about.license_file="~/bin/seq_crumbs-0.1.9/LICENSE.txt"
-
+LABEL extra.binaries="sff_extract"
 
 MAINTAINER David Sharkey <davidsharkey95@gmail.com>
 
@@ -39,7 +39,7 @@ USER biodocker
 
 WORKDIR /data
 
-CMD ["sff_extract"]
+# CMD ["sff_extract"]
 
 # References: 
 # biocontainers.pro/docs/developer-manual/biocontainers-dockerfile/
